# lecture2023

./: LICENSE  README.md
exudyn_tutorial/: README.md  double_pendulum.py  double_pendulum_fem.py
grasp_planning_tutorials/: CMakeLists.txt  README.md  melodic.rosinstall  melodic_latest_graspit.rosinstall  noetic_latest_graspit.rosinstall  package.xml
grasp_planning_tutorials/graspit_data/models/objects/: fetch_pick_and_place_cylinder.iv  fetch_pick_and_place_cylinder.xml
grasp_planning_tutorials/graspit_data/models/obstacles/: cafe_table_surface.iv  cafe_table_surface.xml
grasp_planning_tutorials/graspit_data/models/robots/fetch_gripper_modified/: fetch_gripper_modified.xml
grasp_planning_tutorials/graspit_data/models/robots/fetch_gripper_modified/virtual/: contacts.vgr  contacts2.vgr  contacts3.vgr
grasp_planning_tutorials/graspit_data/worlds/: fetch_pick_and_place.xml
grasp_planning_tutorials/launch/: fetch_pick_and_place.launch
grasp_planning_tutorials/models/fetch_pick_and_place_cylinder/: model.config  model.sdf
grasp_planning_tutorials/node_scripts/: fetch_pick_and_place.py
grasp_planning_tutorials/scripts/: install_graspit_data
grasp_planning_tutorials/worlds/: fetch_pick_and_place.world
mujoco_tutorials/: CMakeLists.txt  README.md  package.xml
mujoco_tutorials/config/: panda.rviz
mujoco_tutorials/launch/: cloth_joy.launch  panda_depth.launch  panda_viz.launch
mujoco_tutorials/models/: CLOTHROBOT.xml  MUJOCO_LOG.TXT  cloth_robot.xml  mobile_robot.xml  multibodies.py  my_model.xml  panda_robot.urdf  panda_robot.xml  ramiel_robot.xml  scene.xml
mujoco_tutorials/models/mesh/: mujoco_leg_1000mm.STL
mujoco_tutorials/scripts/: cloth_sim.py  hoge.py  mobile_mpc.py  mujoco_sim.py  panda_convert_js.py  panda_grasp.py  panda_ik.py  panda_sim.py  ramiel_sim.py  ramiel_utils.py
student_projects/: README.md
