<?xml version="1.0"?>
<package format="3">
  <name>grasp_planning_tutorials</name>
  <version>0.0.0</version>
  <description>Tutorials for grasp planning and execution with graspit, moveit, and gazebo</description>

  <maintainer email="pazeshun3684@gmail.com">Shun Hasegawa</maintainer>
  <author email="pazeshun3684@gmail.com">Shun Hasegawa</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>fetch_gazebo</exec_depend>
  <exec_depend>fetch_moveit_config</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>graspit_commander</exec_depend>
  <exec_depend>graspit_interface</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 2">ipython</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">ipython3</exec_depend>
  <exec_depend>moveit_commander</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>

  <export>
  </export>
</package>
